--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="canonical" href="https://vidall.github.io/pwa/">
+    <link rel="canonical" href="https://vidall.github.io/DevPWA/">
     <meta name="theme-color" content="#37c5a8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -89,7 +89,7 @@
                     </div> 
                 </div>
             </div>   
-        Att    
+        Att 2  
     </div>  
 
     <script>
